--- a/5-Loading-Animation-1/index.css
+++ b/5-Loading-Animation-1/index.css
@@ -1,33 +1,40 @@
-html, body {
+:root {
+    --color-light: lightgray;
+    --color-dark: darkgray;
+}
+
+html,
+body {
     margin: 0;
     padding: 0;
 }
 
 .container {
-   height: 50px;
-   width: auto;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.circle-1 , .circle-2, .circle-3 {
-    background: gray;
-    width: 50px;
-    height: 50px;
-    flex: 3;
-    gap: 20px;
-}
-.circle-1 {
-    margin-right: 20px;
-
+.circle {
+    width: 1.5em;
+    height: 1.5em;
+    background: #000;
+    margin: .5em;
+    border-radius: 50%;
+    animation: pulse infinite alternate 1s;
 }
 
-.circle-2 {
-    margin-right: 20px;
 
-}
 
-.circle-3 {
-    
+@keyframes pulse {
+    from {
+        background: var(--color-dark);
+    }
+
+    to {
+        background: var(--color-light);
+        height: 1.6em;
+        width: 1.6em;
+    }
 }
