--- a/8-Word-Carousel/index.css
+++ b/8-Word-Carousel/index.css
@@ -5,10 +5,9 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h2 {
-    margin: 0;
-    padding: 0;
+h1 {
     font-size: 3.5em;
+
 }
 
 .container {
@@ -18,9 +17,28 @@ h2 {
     align-items: center;
 }
 
-span {
-    background-color: blue;
+h1:after {
+    content: "Coding";
+    animation: swap infinite 6s;
+    background: blue;
+    padding: 10px;
+    margin-left: 15px;
+    border-radius: 10px;
     color: white;
-    padding: .3em;
-    border-radius: .2em;
+}
+
+@keyframes swap {
+    0% {
+        content: "Fishing";
+    }
+    25%
+    {
+        content: "Camping";
+    }
+    50% {
+        content: "Swimming";
+    }
+    75% {
+        content: "Cooking";
+    }
 }
